welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = false

def haveBaggle():Boolean = {
  for (cpt0 <- 1 to 6) {
  for (cpt <- 1 to 6) {
    avance()
    if (estSurBiscuit) {
      vuBiscuit = true
    }
    recule()
  }	
  if (vuBiscuit == true) {
    return true
  } else {
    droite()
    avance()
    gauche()
  }
  }
}



